--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.20.0",
+    "react-swipeable-views": "^0.14.0",
     "zustand": "^4.4.0"
   },
   "scripts": {
